Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Payout__c/Stripe_Payout__c.object-meta.xml
<CustomObject>
    <label>Stripe Payout</label>
    <nameField>
        <label>Stripe Payout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Payouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>