Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Payout__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>LegalEntity</referenceTo>
    <relationshipLabel>Stripe Payouts</relationshipLabel>
    <relationshipName>Stripe_Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>