Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Payout__c/fields/stripe_id__c.field-meta.xml
<CustomField>
    <fullName>stripe_id__c</fullName>
    <label>stripe id</label>
    <type>TextArea</type>
</CustomField>