Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Payout__c/fields/transfer_amount__c.field-meta.xml
<CustomField>
    <fullName>transfer_amount__c</fullName>
    <label>transfer amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>