Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Payout__c/fields/transfer_status__c.field-meta.xml
<CustomField>
    <fullName>transfer_status__c</fullName>
    <label>transfer status</label>
    <type>TextArea</type>
</CustomField>